fix APK release issue

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,3 +45,9 @@ dependencies {
 repositories {
     mavenCentral()
 }
+
+configurations.all {
+    resolutionStrategy {
+        force 'androidx.core:core-ktx:1.6.0'
+    }
+}
